# PyGrammaire

./: LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pyfr/: __main__.py  accord.py  sujet.py
src/pyfr/verbes/: __init__.py  indicatif.py  infinitif.py
src/pygrammaire/: __main__.py  sujet.py
src/pygrammaire/verbes/: auxilliaire.py  indicatif.py  infinitif.py
tests/: test_pyfr.py
